--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,35 +1,33 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-input></ion-input>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Search for Words</ion-title>
+    </ion-toolbar>
+    <ion-toolbar>
+        <app-search-bar
+            [(ngModel)]="searchQuery"
+            (ngModelChange)="queryChanged()"
+            (submitInput)="queryChanged()"
+            [showCancelButton]="searchActive ? 'always' : 'focus'"
+            [placeholder]="'Search Words'"
+        ></app-search-bar>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-      <ion-input></ion-input>
-    </ion-toolbar>
-  </ion-header> -->
+    <div class="container">
+        <ion-card>
+            <ion-card-header>
+                <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+                <ion-card-title>Card Title</ion-card-title>
+            </ion-card-header>
 
-  <div class="container">
-    <ion-card>
-      <ion-card-header>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-        <ion-card-title>Card Title</ion-card-title>
-      </ion-card-header>
-
-      <ion-card-content>
-        Keep close to Nature's heart... and break clear away, once in awhile,
-        and climb a mountain or spend a week in the woods. Wash your spirit
-        clean.
-      </ion-card-content> </ion-card
-    >
-  </div>
+            <ion-card-content>
+                Keep close to Nature's heart... and break clear away, once in awhile, and climb a mountain or spend a week in the woods.
+                Wash your spirit clean.
+            </ion-card-content>
+        </ion-card>
+    </div>
 </ion-content>
