modify search bar style

--- a/src/app/core/components/search-bar/components/index/search-bar.component.html
+++ b/src/app/core/components/search-bar/components/index/search-bar.component.html
@@ -1,9 +1,6 @@
 <div class="container" [class.focused]="focused">
     <div class="search-bar" [class.light]="borderColor === 'dark'">
-        <button *ngIf="!platform.is('ios') && showFocus()" (click)="cancelSearch()" class="md-cancel">
-            <ion-icon name="arrow-back"></ion-icon>
-        </button>
-        <div *ngIf="!showFocus() || platform.is('ios')" class="signifier">
+        <div class="signifier">
             <ion-icon name="search"></ion-icon>
         </div>
         <form action="." #searchForm="ngForm" (ngSubmit)="handleSubmit()">
@@ -13,7 +10,7 @@
                 (blur)="setBlurTimeout()" #searchInput name="searchQuery" [ngStyle]="{'backgroundColor': bcgColor}">
         </form>
         <button class="clear" *ngIf="showFocus()" (click)="clearInput()">
-            <ion-icon [name]="platform.is('ios') ? 'close-circle' : 'close'"></ion-icon>
+            <ion-icon [name]="'close'"></ion-icon>
         </button>
     </div>
 </div>
