--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
         <app-search-bar
             [(ngModel)]="searchQuery"
             (ngModelChange)="queryChanged()"
-            (submitInput)="queryChanged()"
+            (submitInput)="querySubmitted()"
             [showCancelButton]="searchActive ? 'always' : 'focus'"
             [placeholder]="'Search Words'"
         ></app-search-bar>
@@ -18,13 +18,32 @@
 
 <ion-content [fullscreen]="true">
     <div class="container">
-        <ion-card class="feature-card">
-            <ion-card-content>
-                <h2>Save words for later</h2>
-                <p>Search any English word to see detailed meanings</p>
-            </ion-card-content>
-        </ion-card>
-        <h1>Random Word</h1>
+        <ion-slides
+            [pager]="true"
+            [scrollbar]="true"
+            [options]="featureCardSlideOptions"
+            (ionSlideWillChange)="slideWillChange()"
+            (ionSlideDidChange)="slideDidChange()"
+            #featureSlidesRef
+        >
+            <ion-slide>
+                <ion-card class="feature-card">
+                    <ion-card-content>
+                        <h2>Save words for later</h2>
+                        <p>Search any English word to see detailed meanings</p>
+                    </ion-card-content>
+                </ion-card>
+            </ion-slide>
+            <ion-slide>
+                <ion-card class="feature-card">
+                    <ion-card-content>
+                        <h2>Random word</h2>
+                        <p>Check out the random word in the card below</p>
+                    </ion-card-content>
+                </ion-card>
+            </ion-slide>
+        </ion-slides>
+        <h2>Random Word</h2>
         <ion-card class="random-word">
             <ion-card-header>
                 <ion-card-title>{{wordDefinition?.word}}</ion-card-title>
@@ -43,5 +62,18 @@
                 </ion-card>
             </ion-card-content>
         </ion-card>
+        <h2>Saved Words</h2>
+        <ion-text color="medium">
+            <p *ngIf="savedWords.length === 0">Save a word by searching for it and clicking on the heart to save.</p>
+        </ion-text>
+        <ion-slides class="saved-words-slides" [options]="savedWordsSlideOptions" #savedWordsSlidesRef>
+            <ion-slide *ngFor="let word of savedWords">
+                <ion-card>
+                    <ion-card-content>
+                        <ion-card-title>{{word}}</ion-card-title>
+                    </ion-card-content>
+                </ion-card>
+            </ion-slide>
+        </ion-slides>
     </div>
 </ion-content>
