--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,7 +13,10 @@ ion-card.random-word {
 }
 
 ion-card.feature-card {
+    height: 120px;
     --background: #003e84;
+    text-align: left;
+    margin-right: 8px;
     h2 {
         color: white;
     }
@@ -23,9 +26,20 @@ ion-card.feature-card {
 }
 
 .definition-card {
-  --background: #484964;
+    --background: #484964;
     p.definition {
-      color: white;
+        color: white;
+    }
+}
+
+ion-slides.saved-words-slides {
+    ion-card {
+        width: 100%;
+        height: 120px;
+        margin-right: 16px;
+        ion-card-title {
+            font-family: 'Roboto Slab';
+        }
     }
 }
 
