--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,22 +29,36 @@
             <ion-slide>
                 <ion-card class="feature-card">
                     <ion-card-content>
-                        <h2>Save words for later</h2>
-                        <p>Search any English word to see detailed meanings</p>
+                        <div fxLayout="row">
+                            <div fxLayout="column">
+                                <h2>Save words for later</h2>
+                                <p>Search any English word to see detailed meanings</p>
+                            </div>
+                            <div class="feature-image-container">
+                                <img src="../../assets/images/taxi-866.png" />
+                            </div>
+                        </div>
                     </ion-card-content>
                 </ion-card>
             </ion-slide>
             <ion-slide>
                 <ion-card class="feature-card">
                     <ion-card-content>
-                        <h2>Random word</h2>
-                        <p>Check out the random word in the card below</p>
+                        <div fxLayout="row">
+                            <div fxLayout="column">
+                                <h2>Random word</h2>
+                                <p>Check out the random word in the card below</p>
+                            </div>
+                            <div class="feature-image-container">
+                                <img src="../../assets/images/Typing-cuate.png" />
+                            </div>
+                        </div>
                     </ion-card-content>
                 </ion-card>
             </ion-slide>
         </ion-slides>
         <h2>Random Word</h2>
-        <ion-card class="random-word">
+        <ion-card *ngIf="wordDefinition" routerLink="/definition/{{wordDefinition?.word}}" class="random-word">
             <ion-card-header>
                 <ion-card-title>{{wordDefinition?.word}}</ion-card-title>
                 <ion-card-subtitle>{{wordDefinition?.pronunciation?.all}}</ion-card-subtitle>
@@ -58,6 +72,24 @@
                     <ion-card-content *ngFor="let definition of wordDefinition?.results; let i = index">
                         <p>Meaning {{i + 1}} - {{definition.partOfSpeech}}</p>
                         <p class="definition">{{definition.definition}}</p>
+                    </ion-card-content>
+                </ion-card>
+            </ion-card-content>
+        </ion-card>
+        <ion-card *ngIf="!wordDefinition" class="random-word">
+            <ion-card-header>
+                <ion-card-title><ion-skeleton-text animated style="width: 60%; height: 20px"></ion-skeleton-text></ion-card-title>
+                <ion-card-subtitle><ion-skeleton-text animated style="width: 50%"></ion-skeleton-text></ion-card-subtitle>
+                <ion-card-subtitle>
+                    <ion-skeleton-text animated style="width: 30%"></ion-skeleton-text>
+                </ion-card-subtitle>
+            </ion-card-header>
+
+            <ion-card-content>
+                <ion-card class="definition-card">
+                    <ion-card-content>
+                        <p><ion-skeleton-text animated style="width: 60%"></ion-skeleton-text></p>
+                        <p class="definition"><ion-skeleton-text animated style="width: 40%"></ion-skeleton-text></p>
                     </ion-card-content>
                 </ion-card>
             </ion-card-content>
