--- a/src/app/definition/definition.page.html
+++ b/src/app/definition/definition.page.html
@@ -31,10 +31,15 @@
             </ion-card-header>
         </ion-card>
         <div class="definitions" *ngFor="let result of wordDefinition?.results; let i = index">
-            <h3>Definition #{{i + 1}} • <i>{{result.partOfSpeech}}</i></h3>
+            <h3>
+              Definition #{{i + 1}} 
+              <ng-container *ngIf="result.partOfSpeech">
+                • <i>{{result.partOfSpeech}}</i>
+              </ng-container>
+            </h3>
             <ion-card>
                 <ion-card-content>
-                    <div fxLayout="column">
+                    <div fxLayout="column" *ngIf="result?.synonyms">
                         <h4>Synonyms</h4>
                         <div>
                             <ion-chip outline color="primary" routerLink="/definition/{{synonym}}" *ngFor="let synonym of result?.synonyms">
