--- a/src/assets/styles/_partials.scss
+++ b/src/assets/styles/_partials.scss
@@ -1,4 +1,5 @@
 @import "partials/card";
 @import "partials/list";
+@import "partials/skeleton";
 @import "partials/toolbar";
-@import "partials/tyopgraphy";
+@import "partials/typography";
