--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
-        <ion-title>Search for Words</ion-title>
+        <ion-title>Dictionary</ion-title>
     </ion-toolbar>
     <ion-toolbar>
         <app-search-bar
@@ -96,13 +96,17 @@
         </ion-card>
         <h2>Saved Words</h2>
         <ion-text color="medium">
-            <p *ngIf="savedWords.length === 0">Save a word by searching for it and clicking on the heart to save.</p>
+            <p *ngIf="savedWords?.length === 0">Save a word by searching for it and clicking on the heart to save.</p>
         </ion-text>
-        <ion-slides class="saved-words-slides" [options]="savedWordsSlideOptions" #savedWordsSlidesRef>
+        <ion-slides *ngIf="savedWords" class="saved-words-slides" [options]="savedWordsSlideOptions" #savedWordsSlidesRef>
             <ion-slide *ngFor="let word of savedWords">
-                <ion-card>
+                <ion-card routerLink="/definition/{{word?.word}}">
                     <ion-card-content>
-                        <ion-card-title>{{word}}</ion-card-title>
+                        <ion-card-title>{{word.word}}</ion-card-title>
+                        <ion-card-subtitle>{{word?.pronunciation?.all}}</ion-card-subtitle>
+                        <ion-card-subtitle *ngIf="word?.syllables?.list.length > 0">
+                            {{getSyllablesString(word?.syllables?.list)}}
+                        </ion-card-subtitle>
                     </ion-card-content>
                 </ion-card>
             </ion-slide>
