--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -58,7 +58,7 @@
             </ion-slide>
         </ion-slides>
         <div fxLayout="row" fxLayoutAlign="start center">
-            <h2>Random Word</h2>
+            <h3>Random Word</h3>
             <div fxFlex></div>
             <ion-button (click)="getRandomWord()" size="small" fill="clear">
                         <ion-icon slot="icon-only" name="refresh"></ion-icon>
@@ -100,21 +100,22 @@
                 </ion-card>
             </ion-card-content>
         </ion-card>
-        <h2>Saved Words</h2>
+        <h3>Saved Words</h3>
         <ion-text color="medium">
             <p *ngIf="savedWords?.length === 0">Save a word by searching for it and clicking on the heart to save.</p>
         </ion-text>
         <ion-slides *ngIf="savedWords" class="saved-words-slides" [options]="savedWordsSlideOptions" #savedWordsSlidesRef>
             <ion-slide *ngFor="let word of savedWords">
-                <ion-card routerLink="/definition/{{word?.word}}">
-                    <ion-card-content>
-                        <ion-card-title>{{word.word}}</ion-card-title>
-                        <ion-card-subtitle>{{word?.pronunciation?.all}}</ion-card-subtitle>
-                        <ion-card-subtitle *ngIf="word?.syllables?.list.length > 0">
-                            {{getSyllablesString(word?.syllables?.list)}}
-                        </ion-card-subtitle>
-                    </ion-card-content>
-                </ion-card>
+                <app-word-card [word]="word"></app-word-card>
+            </ion-slide>
+        </ion-slides>
+        <h3>Recent Words</h3>
+        <ion-text color="medium">
+            <p *ngIf="savedWords?.length === 0">Save a word by searching for it and clicking on the heart to save.</p>
+        </ion-text>
+        <ion-slides *ngIf="savedWords" class="saved-words-slides" [options]="recentWordsSlideOptions" #recentWordsSlidesRef>
+            <ion-slide *ngFor="let word of recentWords">
+                <app-word-card [word]="word"></app-word-card>
             </ion-slide>
         </ion-slides>
     </div>
