--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,9 +1,43 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>settings</ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="true">
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Settings</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <div class="container">
+        <ion-card class="user-profile-card">
+            <ion-card-header>
+                <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
+                    <img src="../../../assets/images/shinkhouse.jpeg" />
+                    <div fxLayout="column">
+                        <ion-card-title>Samuel Hinkhouse</ion-card-title>
+                        <ion-card-subtitle>{{savedWords?.length}} saved words</ion-card-subtitle>
+                    </div>
+                </div>
+            </ion-card-header>
+        </ion-card>
 
+        <ion-card>
+            <ion-card-header>
+                <ion-card-title>General</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+                <ion-list lines="full">
+                    <ion-item routerLink="/settings/recent">
+                        <ion-icon name="text-outline" slot="start"></ion-icon>
+                        <ion-label>Recent Words</ion-label>
+                    </ion-item>
+
+                    <ion-item routerLink="/settings/favorites">
+                        <ion-icon name="heart" slot="start"></ion-icon>
+                        <ion-label>Favorite Words</ion-label>
+                    </ion-item>
+                </ion-list>
+            </ion-card-content>
+        </ion-card>
+    </div>
 </ion-content>
