--- a/src/assets/styles/_partials.scss
+++ b/src/assets/styles/_partials.scss
@@ -1,5 +1,6 @@
 @import "partials/card";
 @import "partials/list";
+@import "partials/refresher";
 @import "partials/skeleton";
 @import "partials/toolbar";
 @import "partials/typography";
