add angular cli ghpages plugin to deploy code change image source

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -43,7 +43,7 @@
                                 <p>Search any English word to see detailed meanings</p>
                             </div>
                             <div class="feature-image-container">
-                                <img src="../../assets/images/taxi-866.png" />
+                                <img src="assets/images/taxi-866.png" />
                             </div>
                         </div>
                     </ion-card-content>
@@ -58,7 +58,7 @@
                                 <p>Check out the random word in the card below</p>
                             </div>
                             <div class="feature-image-container">
-                                <img src="../../assets/images/Typing-cuate.png" />
+                                <img src="assets/images/Typing-cuate.png" />
                             </div>
                         </div>
                     </ion-card-content>
