--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -12,7 +12,7 @@
         <ion-card class="user-profile-card">
             <ion-card-header>
                 <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
-                    <img src="../../../assets/images/shinkhouse.jpeg" />
+                    <img src="assets/images/shinkhouse.jpeg" />
                     <div fxLayout="column">
                         <ion-card-title>Samuel Hinkhouse</ion-card-title>
                         <ion-card-subtitle>{{savedWords?.length}} saved words</ion-card-subtitle>
